--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #dcdcdc;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+    margin: 0;
+    background-color: rgb(16, 16, 16);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header{
+    font-size: larger;
+    background-color: rgb(32, 32, 32);
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button, input{
+    background-color: transparent;
+    border: 1px solid #dcdcdc;
+    padding: 0.5rem;
+}
+
+button{
+    cursor:pointer;
+    border-radius: 0.5rem;
+}
+button:hover{
+    background-color: rgb(27, 27, 27);
 }
